syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommRanklistResponseProtobuf";

message	CommRanklistResponse  {
	optional	uint32	result = 10;
	optional	CommRanklistRequest	request = 11;
	repeated	Ranklist	ranks = 12;
}